--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			var y = document.createAttribute("class");
 			y.value = "contohstyle";
 			b.attributes.setNamedItem(y);
-			document.getElementById("valueID").innerHTML = "value";
+			document.getElementById("valueID").innerHTML = "button";
 		}
 	</script>
 </body>
